# aoc_leaderbot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  SECURITY.md  codecov.yml  docker-compose.yml  justfile  tarpaulin.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit-check.yml  ci.yml  publish.yml  release.yml
aoc_leaderboard/: Cargo.toml  README.md  build.rs
aoc_leaderboard/examples/: http.rs
aoc_leaderboard/src/: aoc.rs  error.rs  lib.rs  test_helpers.rs
aoc_leaderboard/tests/: aoc.rs  error.rs
aoc_leaderbot/: Cargo.toml  README.md
aoc_leaderbot/src/: lib.rs  main.rs
aoc_leaderbot_aws/: Cargo.toml  README.md
aoc_leaderbot_aws/src/: error.rs
aoc_leaderbot_aws/src/leaderbot/: aws.rs
aoc_leaderbot_aws/src/leaderbot/aws/: dynamo.rs
aoc_leaderbot_aws/src/leaderbot/aws/dynamo/: storage.rs
aoc_leaderbot_aws/tests/aws/: dynamo.rs  mod.rs
aoc_leaderbot_aws/tests/aws/dynamo/: storage.rs
aoc_leaderbot_aws_lambda/: Cargo.toml  README.md
aoc_leaderbot_aws_lambda/src/: lib.rs  main.rs
aoc_leaderbot_aws_lambda_impl/: Cargo.toml  README.md  build.rs  msrv-pins.toml
aoc_leaderbot_aws_lambda_impl/src/: generic_handler.rs  leaderbot.rs  lib.rs  main.rs
aoc_leaderbot_aws_lambda_impl/tests/: bins.rs  leaderbot.rs
aoc_leaderbot_aws_lambda_impl/tests/prepare_dynamodb/: mod.rs
aoc_leaderbot_aws_lib/: Cargo.toml  README.md  build.rs  msrv-pins.toml
aoc_leaderbot_aws_lib/src/: error.rs  leaderbot.rs  lib.rs
aoc_leaderbot_aws_lib/src/leaderbot/: storage.rs
aoc_leaderbot_aws_lib/src/leaderbot/storage/: aws.rs
aoc_leaderbot_aws_lib/src/leaderbot/storage/aws/: dynamodb.rs
aoc_leaderbot_aws_lib/src/leaderbot/storage/aws/dynamodb/: config.rs  test_helpers.rs  testing.rs
aoc_leaderbot_aws_lib/src/leaderbot/storage/aws/dynamodb/config/: table.rs
aoc_leaderbot_aws_lib/tests/aws/dynamo/: storage.rs
aoc_leaderbot_aws_lib/tests/storage/: aws.rs
aoc_leaderbot_aws_lib/tests/storage/aws/: dynamodb.rs
aoc_leaderbot_lib/: Cargo.toml  README.md  build.rs
aoc_leaderbot_lib/resources/tests/leaderboards/: sample_leaderboard.json
aoc_leaderbot_lib/src/: detail.rs  error.rs  leaderbot.rs  lib.rs  mockable.rs
aoc_leaderbot_lib/src/leaderbot/: config.rs  reporter.rs  storage.rs
aoc_leaderbot_lib/src/leaderbot/config/: env.rs  mem.rs
aoc_leaderbot_lib/src/leaderbot/reporter/: console.rs
aoc_leaderbot_lib/src/leaderbot/reporter/console/: detail.rs
aoc_leaderbot_lib/src/leaderbot/storage/: dynamo.rs  mem.rs
aoc_leaderbot_lib/tests/: error.rs  leaderbot.rs
aoc_leaderbot_lib/tests/config/: env.rs  mem.rs  mod.rs
aoc_leaderbot_lib/tests/storage/: dynamo.rs  mem.rs  mod.rs
aoc_leaderbot_lib/tests/test_helpers/: mod.rs
aoc_leaderbot_slack_lib/: Cargo.toml  README.md  msrv-pins.toml
aoc_leaderbot_slack_lib/examples/: post_test_message_to_slack.rs
aoc_leaderbot_slack_lib/src/: error.rs  leaderbot.rs  lib.rs  slack.rs
aoc_leaderbot_slack_lib/src/leaderbot/: reporter.rs
aoc_leaderbot_slack_lib/src/leaderbot/reporter/: slack.rs
aoc_leaderbot_slack_lib/src/leaderbot/reporter/slack/: webhook.rs
aoc_leaderbot_slack_lib/src/leaderbot/reporter/slack/webhook/: detail.rs
aoc_leaderbot_slack_lib/src/slack/: webhook.rs
aoc_leaderbot_slack_lib/tests/: slack.rs
aoc_leaderbot_slack_lib/tests/reporter/: slack.rs
aoc_leaderbot_slack_lib/tests/reporter/slack/: webhook.rs
aoc_leaderbot_slack_lib/tests/webhook/: mod.rs
aoc_leaderbot_test_helpers/: Cargo.toml  README.md
aoc_leaderbot_test_helpers/src/: lib.rs
aoc_leaderbot_test_helpers/tests/: leaderboard.rs
