[workspace]
resolver = "3"
members = [
    "aoc_leaderboard",
    "aoc_leaderbot_aws_lambda_impl",
    "aoc_leaderbot_aws_lib",
    "aoc_leaderbot_lib",
    "aoc_leaderbot_slack_lib",
]

[workspace.package]
version = "2.0.0"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2024"

license = "MIT"

homepage = "https://github.com/clechasseur/aoc_leaderbot#readme"
repository = "https://github.com/clechasseur/aoc_leaderbot"

[workspace.dependencies]
anyhow = "1.0.100"
aoc_leaderboard = { version = "2.0.0", path = "aoc_leaderboard" }
aoc_leaderbot_aws_lib = { version = "2.0.0", path = "aoc_leaderbot_aws_lib" }
aoc_leaderbot_lib = { version = "2.0.0", path = "aoc_leaderbot_lib", default-features = false }
aoc_leaderbot_slack_lib = { version = "2.0.0", path = "aoc_leaderbot_slack_lib" }
aws-config = "1.8.12"
aws-sdk-dynamodb = "1.101.0"
chrono = "0.4.42"
clap = "4.5.54"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
gratte = "1.2.0"
itertools = "0.14.0"
lambda_runtime = "1.0.2"
reqwest = "0.13.1"
rstest = "0.26.1"
serde = "1.0.228"
serde_dynamo = "4.3.0"
serde_json = "1.0.148"
serde_with = "3.16.1"
thiserror = "2.0.17"
tokio = "1.49.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = "1.19.0"
veil = "0.3.0"
wiremock = "0.6.5"

# Dev dependencies:
assert_cmd = "2.1.1"
assert_matches = "1.5.0"
clap-verbosity-flag = "3.0.4"
mockall = "0.14.0"
serial_test = "3.3.1"
test-log = { version = "0.2.19", default-features = false }
testcontainers-modules = "0.14.0"
tracing-test = "0.2.5"
