[workspace]
resolver = "3"
members = [
    "aoc_leaderboard",
    "aoc_leaderbot_aws_lambda_impl",
    "aoc_leaderbot_aws_lib",
    "aoc_leaderbot_lib",
    "aoc_leaderbot_slack_lib",
]

[workspace.package]
version = "3.0.0"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2024"

license = "MIT"

homepage = "https://github.com/clechasseur/aoc_leaderbot#readme"
repository = "https://github.com/clechasseur/aoc_leaderbot"

[workspace.dependencies]
anyhow = "1.0.103"
aoc_leaderboard = { version = "3.0.0", path = "aoc_leaderboard" }
aoc_leaderbot_aws_lib = { version = "3.0.0", path = "aoc_leaderbot_aws_lib" }
aoc_leaderbot_lib = { version = "3.0.0", path = "aoc_leaderbot_lib", default-features = false }
aoc_leaderbot_slack_lib = { version = "3.0.0", path = "aoc_leaderbot_slack_lib" }
aws-config = "1.8.18"
aws-sdk-dynamodb = { version = "1.116.0", default-features = false }
chrono = "0.4.45"
clap = "4.6.1"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
gratte = "2.0.0"
itertools = "0.15.0"
lambda_runtime = "1.2.1"
reqwest = "0.13.4"
rstest = "0.26.1"
serde = "1.0.228"
serde_dynamo = "4.3.0"
serde_json = "1.0.150"
serde_with = "3.21.0"
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = "1.23.4"
veil = "0.3.0"
wiremock = "0.6.5"

# Dev dependencies:
assert_cmd = "2.2.2"
assert_matches = "1.5.0"
clap-verbosity-flag = "3.0.4"
mockall = "0.15.0"
serial_test = "3.5.0"
test-log = { version = "0.2.21", default-features = false }
testcontainers-modules = "0.15.0"
tracing-test = "0.2.6"
