[package]
name = "aoc_leaderboard"
version = "0.3.0"
authors.workspace = true
edition = "2021"
rust-version = "1.70.0"

readme = "README.md"
license.workspace = true

homepage = "https://github.com/clechasseur/aoc_leaderbot/tree/main/aoc_leaderboard#readme"
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderboard/"

description = "Strongly-typed wrapper for Advent of Code leaderboard data"

keywords = [ "aoc", "advent-of-code", "api", "http" ]
categories = [ "api-bindings", "asynchronous", "data-structures" ]

include = [ "src/**/*", "tests/**/*", "resources/tests/**/*", "examples/**/*", "build.rs", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[[example]]
name = "http"
required-features = ["http"]

[features]
http = ["reqwest", "serde_json", "tracing"]

[dependencies]
reqwest = { workspace = true, optional = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
dotenvy = { workspace = true }
serde_json = { workspace = true }
test-log = { workspace = true, default-features = false, features = ["trace"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
wiremock = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }
