[package]
name = "aoc_leaderboard"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version = "1.88.0"

readme = "README.md"
license.workspace = true

homepage = "https://github.com/clechasseur/aoc_leaderbot/tree/main/aoc_leaderboard#readme"
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderboard/"

description = "Strongly-typed wrapper for Advent of Code leaderboard data"

keywords = [ "aoc", "advent-of-code", "api", "http" ]
categories = [ "api-bindings", "asynchronous", "data-structures" ]

include = [ "src/**/*", "tests/**/*", "resources/tests/**/*", "examples/**/*", "build.rs", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[[example]]
name = "http"
required-features = ["http"]

[features]
http = ["dep:reqwest", "dep:serde_json", "dep:tracing"]

__test_helpers = ["http", "dep:chrono", "dep:rstest", "dep:wiremock"]

[dependencies]
chrono = { workspace = true, optional = true }
gratte = { workspace = true }
reqwest = { workspace = true, optional = true, default-features = false, features = ["json"] }
rstest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
veil = { workspace = true }
wiremock = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
dotenvy = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
test-log = { workspace = true, default-features = false, features = ["trace"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
