[package]
name = "aoc_leaderbot_aws_lambda_impl"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version = "1.88.0"

license.workspace = true

homepage = "https://github.com/clechasseur/aoc_leaderbot/tree/main/aoc_leaderbot_aws_lambda_impl#readme"
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderbot_aws_lambda_impl/"

description = "Implementation of an Advent of Code leaderboard-watching bot running in AWS Lambda"

keywords = [ "aoc", "advent-of-code", "aws" ]
categories = [ "asynchronous" ]

include = [ "src/**/*", "tests/**/*", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = false
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[package.metadata.lambda.deploy]
memory = 512 # MB
timeout = 640 # seconds
tracing = "active"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(ci)", "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[[bin]]
name = "prepare_dynamodb"
required-features = ["__prepare_dynamodb"]

[features]
__testing = ["dep:aws-config"]

__prepare_dynamodb = ["dep:aws-config", "dep:clap"]

[dependencies]
anyhow = { workspace = true }
aoc_leaderboard = { workspace = true }
aoc_leaderbot_aws_lib = { workspace = true }
aoc_leaderbot_lib = { workspace = true, default-features = true }
aoc_leaderbot_slack_lib = { workspace = true }
aws-config = { workspace = true, optional = true, features = ["behavior-version-latest"] }
clap = { workspace = true, optional = true, features = ["derive"] }
dotenvy = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
veil = { workspace = true }

[dev-dependencies]
aoc_leaderboard = { workspace = true, features = ["__test_helpers"] }
aoc_leaderbot_aws_lib = { workspace = true, features = ["__test_helpers"] }
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true, features = ["file_locks"] }
testcontainers-modules = { workspace = true, features = ["dynamodb"] }
test-log = { workspace = true, default-features = false, features = ["trace"] }
