[package]
name = "aoc_leaderbot_aws_lib"
version = "0.3.0"
authors.workspace = true
edition = "2021"
rust-version = "1.81.0"

readme = "README.md"
license.workspace = true

homepage = "https://github.com/clechasseur/aoc_leaderbot/tree/main/aoc_leaderbot_aws_lib#readme"
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderbot_aws_lib/"

description = "AWS-specific support library for aoc_leaderbot, an Advent of Code leaderboard-watching bot"

keywords = [ "aoc", "advent-of-code", "aws" ]
categories = [ "asynchronous" ]

include = [ "src/**/*", "tests/**/*", "build.rs", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[features]
default = ["dynamodb"]

dynamodb = ["dynamodb-base", "storage-dynamodb"]

dynamodb-base = ["aws-sdk-dynamodb"]
storage-dynamodb = ["dynamodb-base", "tokio/time"]

[dependencies]
aoc_leaderboard = { path = "../aoc_leaderboard", version = "0.3.0" }
aoc_leaderbot_lib = { path = "../aoc_leaderbot_lib", version = "0.3.0" }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_dynamo = { workspace = true, features = ["aws-sdk-dynamodb+1"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
aoc_leaderbot_test_helpers = { path = "../aoc_leaderbot_test_helpers", version = "0.3.0" }
assert_matches = { workspace = true }
test-log = { workspace = true, default-features = false, features = ["trace"] }
tokio = { workspace = true, features = ["macros"] }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
rustc_version = { workspace = true }
