[package]
name = "aoc_leaderbot_aws_lib"
version = "0.3.0"
authors.workspace = true
edition = "2021"
rust-version = "1.81.0"

readme = "README.md"
license.workspace = true

homepage = "https://github.com/clechasseur/aoc_leaderbot/tree/main/aoc_leaderbot_aws_lib#readme"
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderbot_aws_lib/"

description = "AWS-specific support library for aoc_leaderbot, an Advent of Code leaderboard-watching bot"

keywords = [ "aoc", "advent-of-code", "aws" ]
categories = [ "asynchronous" ]

include = [ "src/**/*", "tests/**/*", "build.rs", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[features]
default = ["dynamodb"]

dynamodb = ["dynamodb-base", "storage-dynamodb"]

dynamodb-base = [
    "dep:aws-sdk-dynamodb",
    "dep:serde_dynamo",
]
storage-dynamodb = [
    "dynamodb-base",
    "aoc_leaderboard",
    "dep:aoc_leaderbot_lib",
    "dep:aws-config",
    "dep:serde",
    "dep:tokio",
    "dep:tracing",
]

__test_helpers = [
    "aoc_leaderboard/__test_helpers",
    "dep:rstest",
    "dep:tokio",
    "dep:uuid",
]

[dependencies]
aoc_leaderboard = { path = "../aoc_leaderboard", version = "0.3.0", optional = true }
aoc_leaderbot_lib = { path = "../aoc_leaderbot_lib", version = "0.3.0", optional = true, default-features = false }
aws-config = { workspace = true, optional = true, features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_dynamo = { workspace = true, optional = true, features = ["aws-sdk-dynamodb+1"] }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["time"] }
tracing = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["v4"] }

[dev-dependencies]
aoc_leaderboard = { path = "../aoc_leaderboard", version = "0.3.0", features = ["__test_helpers"] }
assert_matches = { workspace = true }
rstest = { workspace = true }
test-log = { workspace = true, default-features = false, features = ["trace"] }
tokio = { workspace = true, features = ["macros"] }

[build-dependencies]
rustc_version = { workspace = true }
