[package]
name = "aoc_leaderbot_lib"
version = "0.1.0"
authors.workspace = true
edition = "2021"
rust-version = "1.75.0"

license.workspace = true

homepage.workspace = true
repository.workspace = true

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[features]
default = ["config-env"]

config-mem = ["derive_builder"]
config-env = ["config-mem"]

storage-mem = []

[dependencies]
aoc_leaderboard = { path = "../aoc_leaderboard", features = ["http"] }
chrono = { workspace = true }
derive_builder = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
uuid = { workspace = true, features = ["v4"] }
wiremock = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }
