[package]
name = "aoc_leaderbot_lib"
version = "0.3.0"
authors.workspace = true
edition = "2021"
rust-version = "1.75.0"

readme = "README.md"
license.workspace = true

homepage = "https://github.com/clechasseur/aoc_leaderbot/tree/main/aoc_leaderbot_lib#readme"
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderbot_lib/"

description = "Support library for aoc_leaderbot, an Advent of Code leaderboard-watching bot"

keywords = [ "aoc", "advent-of-code" ]
categories = [ "asynchronous" ]

include = [ "src/**/*", "tests/**/*", "build.rs", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[features]
default = ["config-env"]

config-mem = ["derive_builder"]
config-env = ["config-mem"]

storage-mem = []

[dependencies]
anyhow = { workspace = true }
aoc_leaderboard = { path = "../aoc_leaderboard", version = "0.3.0", features = ["http"] }
chrono = { workspace = true }
derive_builder = { workspace = true, optional = true }
mockall_double = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
aoc_leaderbot_test_helpers = { path = "../aoc_leaderbot_test_helpers", version = "0.3.0" }
assert_matches = { workspace = true }
mockall = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["macros", "test-util"] }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
rustc_version = { workspace = true }
