[package]
name = "aoc_leaderbot_slack_lib"
version = "0.2.0"
authors.workspace = true
edition = "2021"
rust-version = "1.75.0"

readme = "README.md"
license.workspace = true

homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderbot_slack_lib/"

description = "Slack-specific support library for aoc_leaderbot, an Advent of Code leaderboard-watching bot"

keywords = [ "aoc", "advent-of-code", "slack" ]
categories = [ "asynchronous" ]

include = [ "src/**/*", "tests/**/*", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[features]
default = ["webhook"]

webhook = ["webhook-base", "reporter-webhook"]

webhook-base = ["derive_builder", "serde"]
reporter-webhook = ["webhook-base", "itertools", "reqwest", "strum"]

[dependencies]
aoc_leaderboard = { path = "../aoc_leaderboard", version = "0.2.0" }
aoc_leaderbot_lib = { path = "../aoc_leaderbot_lib", version = "0.2.0" }
derive_builder = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
strum = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }
