[package]
name = "aoc_leaderbot_slack_lib"
version = "0.3.0"
authors.workspace = true
edition = "2021"
rust-version = "1.75.0"

readme = "README.md"
license.workspace = true

homepage = "https://github.com/clechasseur/aoc_leaderbot/tree/main/aoc_leaderbot_slack_lib#readme"
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderbot_slack_lib/"

description = "Slack-specific support library for aoc_leaderbot, an Advent of Code leaderboard-watching bot"

keywords = [ "aoc", "advent-of-code", "slack" ]
categories = [ "asynchronous" ]

include = [ "src/**/*", "tests/**/*", "examples/**/*", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[[example]]
name = "post_test_message_to_slack"
required-features = ["reporter-webhook", "clap"]

[features]
default = ["webhook"]

webhook = ["webhook-base", "reporter-webhook"]

webhook-base = ["dep:derive_builder", "dep:serde"]
reporter-webhook = [
    "webhook-base",
    "dep:aoc_leaderboard",
    "dep:aoc_leaderbot_lib",
    "dep:itertools",
    "dep:reqwest",
    "dep:strum",
    "dep:tracing",
    "dep:veil",
]

[dependencies]
aoc_leaderboard = { path = "../aoc_leaderboard", version = "0.3.0", optional = true }
aoc_leaderbot_lib = { path = "../aoc_leaderbot_lib", version = "0.3.0", optional = true, default-features = false }
clap = { workspace = true, optional = true, features = ["derive"] }
derive_builder = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
strum = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
veil = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
aoc_leaderbot_test_helpers = { path = "../aoc_leaderbot_test_helpers", version = "0.3.0" }
assert_matches = { workspace = true }
chrono = { workspace = true }
clap-verbosity-flag = { workspace = true, features = ["tracing"] }
dotenvy = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
test-log = { workspace = true, default-features = false, features = ["trace"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
wiremock = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }
