[package]
name = "aoc_leaderbot_slack_lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version = "1.88.0"

readme = "README.md"
license.workspace = true

homepage = "https://github.com/clechasseur/aoc_leaderbot/tree/main/aoc_leaderbot_slack_lib#readme"
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderbot_slack_lib/"

description = "Slack-specific support library for aoc_leaderbot, an Advent of Code leaderboard-watching bot"

keywords = [ "aoc", "advent-of-code", "slack" ]
categories = [ "asynchronous" ]

include = [ "src/**/*", "tests/**/*", "examples/**/*", "build.rs", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[[example]]
name = "post_test_message_to_slack"
required-features = ["reporter-webhook", "clap"]

[features]
default = ["webhook"]

webhook = ["webhook-base", "reporter-webhook"]

webhook-base = ["dep:derive_builder", "dep:serde"]
reporter-webhook = [
    "webhook-base",
    "dep:aoc_leaderboard",
    "dep:aoc_leaderbot_lib",
    "dep:gratte",
    "dep:itertools",
    "dep:reqwest",
    "dep:tracing",
    "dep:veil",
]

[dependencies]
aoc_leaderboard = { workspace = true, optional = true }
aoc_leaderbot_lib = { workspace = true, optional = true, default-features = false }
clap = { workspace = true, optional = true, features = ["derive"] }
derive_builder = { workspace = true, optional = true }
gratte = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, default-features = false }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
veil = { workspace = true, optional = true }

[dev-dependencies]
aoc_leaderboard = { workspace = true, features = ["__test_helpers"] }
anyhow = { workspace = true }
assert_matches = { workspace = true }
chrono = { workspace = true }
clap-verbosity-flag = { workspace = true, features = ["tracing"] }
dotenvy = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
