[package]
name = "aoc_leaderbot_test_helpers"
version = "0.3.0"
authors.workspace = true
edition = "2021"

readme = "README.md"
license.workspace = true

homepage = "https://github.com/clechasseur/aoc_leaderbot/tree/main/aoc_leaderbot_test_helpers#readme"
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderbot_test_helpers/"

description = "Test helpers for aoc_leaderbot and related projects"

include = [ "src/**/*", "tests/**/*", "resources/tests/**/*", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[dependencies]
aoc_leaderboard = { path = "../aoc_leaderboard", version = "0.3.0" }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
wiremock = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
